--- a/frontend/src/common/components/Upload/UploadModal.scss
+++ b/frontend/src/common/components/Upload/UploadModal.scss
@@ -118,7 +118,7 @@
   }
   
   &__file-limits {
-    margin: 0.5rem 0 1.5rem;
+    margin: 0.5rem 0;
     
     p {
       margin-bottom: 0.25rem;
@@ -132,7 +132,7 @@
   }
   
   &__upload-btn {
-    margin-top: 1.5rem;
+    margin-top: 1.0rem;
     width: 100%;
     max-width: 12rem;
     font-weight: 500;
