Change background on home page

--- a/frontend/src/pages/Reports/ReportsListPage.scss
+++ b/frontend/src/pages/Reports/ReportsListPage.scss
@@ -1,8 +1,7 @@
 .reports-list-page {
-  --background: white;
+  --background: url('../../../assets/Reports_bg.png') no-repeat center center;
 
   &__header {
-    background: white;
     box-shadow: none;
 
     ion-toolbar {
