--- a/frontend/src/pages/Home/HomePage.scss
+++ b/frontend/src/pages/Home/HomePage.scss
@@ -1,29 +1,30 @@
 .home-page {
+  background: url('../../../assets/Reports_bg.png') no-repeat center center;
   background-color: var(--ion-color-light);
   min-height: 100%;
-  
+
   &__greeting {
     margin-top: 0;
     margin-bottom: 1.5rem;
-    
+
     &-container {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
     }
-    
+
     &-text {
       margin-top: 0.75rem;
       margin-left: 0;
     }
-    
+
     &-title {
       font-size: 1rem;
       color: var(--ion-color-medium);
       margin: 0 0 0.25rem;
       font-weight: normal;
     }
-    
+
     &-subtitle {
       font-size: 1.5rem;
       font-weight: 700;
@@ -31,10 +32,10 @@
       color: var(--ion-color-dark);
     }
   }
-  
+
   &__avatar {
     flex-shrink: 0;
-    
+
     ion-avatar {
       width: 4rem;
       height: 4rem;
@@ -42,7 +43,7 @@
       box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.1);
     }
   }
-  
+
   &__ai-card {
     margin-bottom: 1.5rem;
     border-radius: 1rem;
@@ -54,7 +55,7 @@
     --ion-card-margin-end: 0;
     margin-inline: 0;
     height: 7.5rem;
-    
+
     ion-card-content {
       padding: 0;
       position: relative;
@@ -62,7 +63,7 @@
       height: 100%;
       display: flex;
       align-items: center;
-      
+
       h3.home-page__ai-card-title {
         color: white;
         font-size: 1rem;
@@ -72,7 +73,7 @@
         white-space: normal;
         word-wrap: break-word;
       }
-      
+
       span.home-page__ai-card-button-inline {
         font-size: 0.875rem;
         color: #FFBE5B;
@@ -84,11 +85,11 @@
         word-wrap: break-word;
       }
     }
-    
+
     &-decoration {
       position: absolute;
       z-index: 1;
-      
+
       &--star1 {
         width: 1rem;
         height: 1rem;
@@ -97,7 +98,7 @@
         top: 0.75rem;
         right: 2.5rem;
       }
-      
+
       &--star2 {
         width: 0.75rem;
         height: 0.75rem;
@@ -106,7 +107,7 @@
         top: 2.5rem;
         right: 1rem;
       }
-      
+
       &--circle1 {
         width: 0.5rem;
         height: 0.5rem;
@@ -115,7 +116,7 @@
         bottom: 1.5rem;
         right: 1.5rem;
       }
-      
+
       &--circle2 {
         width: 0.375rem;
         height: 0.375rem;
@@ -125,7 +126,7 @@
         left: 1.5rem;
       }
     }
-    
+
     &-content {
       display: flex;
       justify-content: space-between;
@@ -135,7 +136,7 @@
       width: 100%;
       padding: 0 1.25rem;
     }
-    
+
     &-text-container {
       flex: 1;
       padding-left: 0.75rem;
@@ -145,7 +146,7 @@
       padding-bottom: 1.25rem;
       max-width: 60%;
     }
-    
+
     &-image-container {
       flex-shrink: 0;
       position: relative;
@@ -158,7 +159,7 @@
       margin-bottom: -1px;
       max-width: 40%;
     }
-    
+
     &-image {
       max-width: 100%;
       height: auto;
@@ -167,7 +168,7 @@
       margin-bottom: 0;
     }
   }
-  
+
   &__reports {
     &-header {
       display: flex;
@@ -175,25 +176,25 @@
       align-items: center;
       margin-bottom: 0.75rem;
     }
-    
+
     &-title {
       font-size: 1.125rem;
       font-weight: 600;
       margin: 0;
       color: var(--ion-color-dark);
     }
-    
+
     &-link {
       font-size: 0.875rem;
       font-weight: 500;
       color: var(--ion-color-primary);
       text-decoration: none;
     }
-    
+
     &-list {
       margin-bottom: 1rem;
       background: transparent;
-      
+
       ion-item {
         --background: white;
         --border-color: rgba(0, 0, 0, 0.05);
@@ -201,7 +202,7 @@
         border-radius: 0.75rem;
         --padding-start: 1rem;
         --padding-end: 1rem;
-        
+
         &:last-child {
           margin-bottom: 0;
         }
@@ -251,4 +252,4 @@ ion-card.home-page__ai-card ion-card-content span.home-page__ai-card-button-inli
 // Skeleton loading styles
 .report-icon.skeleton {
   background-color: var(--ion-color-light-shade);
-} 
+}
