--- a/frontend/src/pages/Home/components/ReportItem/ReportItem.scss
+++ b/frontend/src/pages/Home/components/ReportItem/ReportItem.scss
@@ -58,13 +58,15 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      background-color: white;
+      border-radius: 50%;
+      padding: 8px;
+      box-sizing: content-box;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
 
       &--active {
         color: white;
         background-color: #4355b9;
-        border-radius: 50%;
-        padding: 8px;
-        box-sizing: content-box;
       }
     }
   }
