--- a/frontend/src/pages/Reports/components/FilterPanel/FilterPanel.scss
+++ b/frontend/src/pages/Reports/components/FilterPanel/FilterPanel.scss
@@ -42,9 +42,9 @@
     cursor: pointer;
 
     &--selected {
-      background-color: #000000;
+      background-color: #313E4C;
       color: white;
-      border-color: #000000;
+      border-color: #313E4C;
     }
   }
 
