--- a/frontend/src/pages/Home/components/ReportItem/ReportItem.scss
+++ b/frontend/src/pages/Home/components/ReportItem/ReportItem.scss
@@ -3,7 +3,6 @@
   padding: 16px;
   border-radius: 12px;
   margin-bottom: 12px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
   position: relative;
   cursor: pointer;
 
@@ -67,6 +66,7 @@
       &--active {
         color: white;
         background-color: #4355b9;
+        box-shadow: none;
       }
     }
   }
@@ -81,7 +81,6 @@
     flex-shrink: 0;
     background-color: white;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
-    border: 1px solid rgba(0, 0, 0, 0.03);
 
     &--general,
     &--brain,
