--- a/frontend/src/pages/Reports/ReportDetailPage.scss
+++ b/frontend/src/pages/Reports/ReportDetailPage.scss
@@ -204,7 +204,7 @@
   }
 
   &__section-empty-icon {
-    background-color: #EEF1FF;
+    background-color: #eef1ff;
     border-radius: 50%;
     width: 90px;
     height: 90px;
