--- a/frontend/src/pages/Reports/ReportDetailPage.scss
+++ b/frontend/src/pages/Reports/ReportDetailPage.scss
@@ -239,103 +239,110 @@
 
   &__item {
     background-color: #ffffff;
-    border-radius: 8px;
+    border-radius: 16px;
     padding: 0;
-    margin-top: 12px;
-    margin-bottom: 8px;
-    border-top: 1px solid #ebeef8;
+    margin: 16px;
     overflow: hidden;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
+    border: 1px solid #ebeef8;
   }
 
   &__item-header {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    padding: 12px 16px;
+    padding: 16px;
     background-color: #fff;
 
     &--high {
       background-color: rgba(201, 58, 84, 0.08);
+      border-bottom: 1px solid rgba(201, 58, 84, 0.15);
     }
 
     &--low {
-      background-color: rgba(108, 99, 255, 0.08);
+      background-color: rgba(250, 173, 113, 0.08);
+      border-bottom: 1px solid rgba(250, 173, 113, 0.15);
     }
   }
 
   &__item-name {
-    font-weight: 500;
-    font-size: 15px;
+    font-weight: 600;
+    font-size: 16px;
     margin-right: 12px;
     flex: 1;
     letter-spacing: 0.26px;
-    line-height: 15.7px;
+    line-height: 20px;
     color: #313e4c;
   }
 
   &__item-level {
-    font-size: 12px;
-    padding: 2px 6px;
-    border-radius: 4px;
+    font-size: 13px;
+    padding: 4px 12px;
+    border-radius: 12px;
     margin-right: 16px;
     font-weight: 600;
-    text-transform: uppercase;
+    text-transform: capitalize;
 
     &--high {
-      background-color: rgba(201, 58, 84, 0.1);
-      color: #c93a54;
+      background-color: #c93a54;
+      color: white;
     }
 
     &--low {
-      background-color: rgba(108, 99, 255, 0.1);
-      color: #435ff0;
+      background-color: #ffcf99;
+      color: white;
     }
   }
 
   &__item-value {
     font-weight: 600;
-    font-size: 15px;
+    font-size: 16px;
     white-space: nowrap;
     color: #313e4c;
   }
 
   &__item-details {
     color: #444;
-    padding: 10px 16px 16px;
-    background-color: rgba(235, 238, 248, 0.3);
+    padding: 16px;
+    background-color: rgba(248, 249, 251, 0.6);
   }
 
   &__item-section {
-    margin-bottom: 12px;
+    margin-bottom: 20px;
 
     &:last-child {
       margin-bottom: 0;
     }
 
     h4 {
-      font-size: 14px;
+      font-size: 15px;
       color: #313e4c;
-      margin: 0 0 4px 0;
+      margin: 0 0 8px 0;
       font-weight: 600;
     }
 
     p {
       margin: 0;
       font-size: 14px;
-      line-height: 1.4;
+      line-height: 1.5;
       color: #5c6d80;
     }
   }
 
   &__item-list {
     margin: 0;
-    padding-left: 18px;
-    font-size: 13px;
+    padding-left: 20px;
+    font-size: 14px;
     line-height: 1.5;
+    color: #5c6d80;
 
     li {
-      margin-bottom: 6px;
+      margin-bottom: 10px;
       padding-left: 4px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 
