Fix filter panel button color

--- a/frontend/src/pages/Reports/components/FilterPanel/FilterPanel.scss
+++ b/frontend/src/pages/Reports/components/FilterPanel/FilterPanel.scss
@@ -53,7 +53,7 @@
   }
 
   &__apply-button {
-    --background: #4355B9;
+    --background: #435FF0;
     --color: white;
     height: 48px;
     font-weight: 600;
