Adjust font on home page

--- a/frontend/src/pages/Home/HomePage.scss
+++ b/frontend/src/pages/Home/HomePage.scss
@@ -261,6 +261,7 @@ ion-card.home-page__ai-card ion-card-content h3.home-page__ai-card-title {
 }
 
 ion-card.home-page__ai-card ion-card-content span.home-page__ai-card-button-inline {
+  font-family: 'Merriweather', serif;
   font-size: 0.875rem;
   color: #ffbe5b;
   font-weight: 500;
