--- a/frontend/src/pages/Home/HomePage.scss
+++ b/frontend/src/pages/Home/HomePage.scss
@@ -70,7 +70,7 @@
         font-weight: 700;
         margin: 0 0 0.25rem;
         text-align: left;
-        white-space: normal;
+        white-space: pre-line;
         word-wrap: break-word;
       }
 
@@ -251,12 +251,13 @@
 
 // Add a more specific selector to override Ionic's default styles
 ion-card.home-page__ai-card ion-card-content h3.home-page__ai-card-title {
+  font-family: 'Inter', serif;
   color: white;
-  font-size: 1rem;
+  font-size: 1.25rem;
   font-weight: 700;
   margin: 0 0 0.25rem;
   text-align: left;
-  white-space: normal;
+  white-space: pre-line;
   word-wrap: break-word;
 }
 
