Fix bookmark icon background color

--- a/frontend/src/pages/Home/components/ReportItem/ReportItem.scss
+++ b/frontend/src/pages/Home/components/ReportItem/ReportItem.scss
@@ -67,7 +67,8 @@
 
       &--active {
         color: white;
-        background-color: #4355b9;
+        /*background-color: #4355b9;*/
+        background-color: #4765ff;
         box-shadow: none;
       }
     }
