--- a/frontend/src/pages/Home/HomePage.scss
+++ b/frontend/src/pages/Home/HomePage.scss
@@ -19,6 +19,7 @@
     }
 
     &-title {
+      font-family: 'Merriweather', serif;
       font-size: 1rem;
       color: var(--ion-color-medium);
       margin: 0 0 0.25rem;
