--- a/frontend/src/common/components/Router/TabNavigation.scss
+++ b/frontend/src/common/components/Router/TabNavigation.scss
@@ -10,7 +10,7 @@
     padding-bottom: 0;
 
     &-button {
-      --color: #435ff0;
+      --color: #ABBCCD;
       --color-selected: #fd7bf4;
 
       /* Ensure consistent alignment across platforms */
@@ -21,11 +21,18 @@
       &-icon {
         margin: 0;
         font-size: 1.25rem;
+        color: #ABBCCD;
       }
 
       &.tab-selected {
         .ls-tab-navigation__bar-button-icon {
           color: var(--color-selected);
+
+          /* Apply to SvgIcon component */
+          &.ls-svg-icon img {
+            /* Pink color #FD7BF4 using precise filter values */
+            filter: brightness(0) saturate(100%) invert(65%) sepia(82%) saturate(5793%) hue-rotate(292deg) brightness(99%) contrast(98%);
+          }
         }
       }
 
@@ -52,6 +59,11 @@
           .ls-tab-navigation__bar-button-icon {
             color: white;
             margin: 0;
+
+            /* Make sure the SVG is white */
+            &.ls-svg-icon img {
+              filter: brightness(0) invert(1);
+            }
           }
         }
       }
