Adjust Filter panel

--- a/frontend/src/pages/Reports/ReportsListPage.scss
+++ b/frontend/src/pages/Reports/ReportsListPage.scss
@@ -1,6 +1,7 @@
 .reports-list-page {
   &__header {
     box-shadow: none;
+    background: inherit;
 
     ion-toolbar {
       --border-width: 0 !important;
