--- a/frontend/src/pages/Home/components/ReportItem/ReportItem.scss
+++ b/frontend/src/pages/Home/components/ReportItem/ReportItem.scss
@@ -54,20 +54,15 @@
 
     &-icon {
       width: 15px;
-      color: #aaa;
       transition: all 0.2s ease;
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: white;
       border-radius: 50%;
-      padding: 11px;
-      box-sizing: content-box;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
+      padding: 11px 7px;
 
       &--active {
         color: white;
-        /*background-color: #4355b9;*/
         background-color: #4765ff;
         box-shadow: none;
       }
