--- a/frontend/src/pages/Home/components/ReportItem/ReportItem.scss
+++ b/frontend/src/pages/Home/components/ReportItem/ReportItem.scss
@@ -51,21 +51,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #FFFFFF;
+    border-radius: 50%;
+    transition: background-color 0.2s ease;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
+
+    &--active {
+      background-color: #435FF0;
+      height: 34px;
+
+    }
 
     &-icon {
-      width: 15px;
       transition: all 0.2s ease;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 50%;
-      padding: 11px 7px;
-
-      &--active {
-        color: white;
-        background-color: #4765ff;
-        box-shadow: none;
-      }
     }
   }
 
