--- a/frontend/src/pages/Reports/ReportDetailPage.scss
+++ b/frontend/src/pages/Reports/ReportDetailPage.scss
@@ -50,7 +50,6 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 16px;
-    margin-bottom: 4px;
   }
 
   &__category {
@@ -84,7 +83,7 @@
     font-family: var(--font-family-base);
     font-size: 18px;
     font-weight: 600;
-    margin: 4px 0 16px;
+    margin: 0 0 16px;
     color: #313e4c;
   }
 
